conta-banco-service/kubefiles/deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conta-banco-app-blue
  namespace: banco-app
  labels:
    version: blue
spec:
  replicas: 5
  selector:
    matchLabels:
      app: conta-banco-app
      namespace: banco-app
  template:
    metadata:
      labels:
        app: conta-banco-app
        namespace: banco-app
        version: blue
    spec:
      containers:
        - name: conta-banco-app
          image: leomafe/conta-banco-service:blue
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
