conta-banco-service/kubefiles/blue-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: conta-banco-service-stage-blue
  namespace: banco-app
spec:
  gateways:
    - banco-app-gateway
  hosts:
    - "*"
  http:
    - match:
      - uri:
          prefix: /conta-banco-service
      route:
      - destination:
          host: conta-banco-service
          port:
            number: 8080
          subset: blue
        weight: 70
      - destination:
          host: conta-banco-service
          port:
            number: 8080
          subset: green
        weight: 30
