conta-banco-service/kubefiles/destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: conta-banco-service-rule
  namespace: banco-app
spec:
  host: conta-banco-service
  subsets:
  - name: blue
    labels:
      version: blue
  - name: green
    labels:
      version: green
